--- a/stylesheet/scss/main.css
+++ b/stylesheet/scss/main.css
@@ -13,8 +13,28 @@
   margin-top: 1.75rem;
 }
 
+@media only screen and (min-width: 48em) {
+  .header {
+    margin-left: 4.875rem;
+    margin-right: 4.875rem;
+    margin-top: 4.875rem;
+  }
+}
+
 .header__logo {
   width: 6rem;
+}
+
+@media only screen and (min-width: 48em) {
+  .header__logo {
+    width: 10rem;
+  }
+}
+
+@media only screen and (min-width: 62.5em) {
+  .header__logo {
+    width: 15rem;
+  }
 }
 
 .header a {
@@ -23,6 +43,26 @@
   color: #ff52bf;
   border: 1px solid #ff52bf;
   border-radius: 2rem;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+
+.header a:hover {
+  border-color: #ff8fd8;
+  color: #ff8fd8;
+  opacity: 0.8;
+}
+
+@media only screen and (min-width: 48em) {
+  .header a {
+    padding: 0.5rem 1.25rem;
+  }
+}
+
+@media only screen and (min-width: 62.5em) {
+  .header a {
+    padding: 0.75rem 2rem;
+  }
 }
 
 .main {
@@ -32,9 +72,21 @@
   margin-top: 7.875rem;
 }
 
+@media only screen and (min-width: 62.5em) {
+  .main {
+    margin-top: 15rem;
+  }
+}
+
 .main__title, .community__title {
   font-size: 1.5rem;
   font-family: "Poppins", sans-serif;
+}
+
+@media only screen and (min-width: 62.5em) {
+  .main__title, .community__title {
+    font-size: 3rem;
+  }
 }
 
 .main__info {
@@ -42,8 +94,19 @@
   margin-bottom: 3.125rem;
 }
 
+@media only screen and (min-width: 48em) {
+  .main__info {
+    max-width: 37.5rem;
+    margin: auto;
+    font-size: 1.1875rem;
+    margin-top: 2.5rem;
+    margin-bottom: 3.125rem;
+  }
+}
+
 .main-btn, .community-btn {
   color: #fff;
+  display: inline-block;
   background-color: #ff52bf;
   font-size: 0.875rem;
   font-weight: 600;
@@ -51,6 +114,18 @@
   padding: 0.875rem 2.625rem;
   -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
           box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+  -webkit-transition: background-color 300ms ease-in-out;
+  transition: background-color 300ms ease-in-out;
+}
+
+.main-btn:hover, .community-btn:hover {
+  background-color: #ff8fd8;
+}
+
+@media only screen and (min-width: 48em) {
+  .main-btn, .community-btn {
+    padding: 1.875rem 8.125rem;
+  }
 }
 
 .main__img {
@@ -59,6 +134,18 @@
   height: 13.25rem;
   margin-top: 6.5625rem;
   margin-bottom: 6.5625rem;
+}
+
+@media only screen and (min-width: 48em) {
+  .main__img {
+    height: 23.25rem;
+  }
+}
+
+@media only screen and (min-width: 62.5em) {
+  .main__img {
+    height: 45.875rem;
+  }
 }
 
 .main__stats {
@@ -72,6 +159,20 @@
   margin: auto;
 }
 
+@media only screen and (min-width: 48em) {
+  .main__stats {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
 .main__stats .stats_content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -83,6 +184,13 @@
   margin-bottom: 4.375rem;
 }
 
+@media only screen and (min-width: 62.5em) {
+  .main__stats .stats_content .stats_icon {
+    width: 3.125rem;
+    height: 3.125rem;
+  }
+}
+
 .main__stats .stats_content .stats_number {
   font-size: 3.875rem;
   font-weight: 900;
@@ -90,8 +198,29 @@
   text-align: left;
 }
 
+@media only screen and (min-width: 48em) {
+  .main__stats .stats_content .stats_number {
+    font-size: 4.5625rem;
+  }
+}
+
 .main__stats .stats_content:nth-child(2) span {
   font-size: 3.375rem;
+}
+
+@media only screen and (min-width: 48em) {
+  .main__stats .stats_content:nth-child(2) span {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    font-size: 4.5625rem;
+  }
 }
 
 .article {
@@ -100,6 +229,23 @@
   margin-top: 2.5rem;
   margin-bottom: 7rem;
   padding: 1.875rem;
+}
+
+@media only screen and (min-width: 48em) {
+  .article {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: left;
+    margin-top: 13rem;
+  }
 }
 
 .article.grow {
@@ -117,6 +263,18 @@
   height: 6.25rem;
 }
 
+@media only screen and (min-width: 48em) {
+  .article.grow::before {
+    background: url(../../images/bg-section-top-desktop-1.svg) top no-repeat;
+    background-size: 100% 100%;
+    position: absolute;
+    top: -9.1875rem;
+    left: 0;
+    width: 100%;
+    height: 9.25rem;
+  }
+}
+
 .article.grow::after {
   content: "";
   background: url(../../images/bg-section-bottom-mobile-1.svg) bottom no-repeat;
@@ -128,10 +286,29 @@
   height: 3.125rem;
 }
 
+@media only screen and (min-width: 48em) {
+  .article.grow::after {
+    background: url(../../images/bg-section-bottom-desktop-1.svg) bottom no-repeat;
+    background-size: 100% 100%;
+    position: absolute;
+    bottom: -9.0625rem;
+    left: 0;
+    width: 100%;
+    height: 9.125rem;
+  }
+}
+
 .article__img {
   background: url(../../images/illustration-grow-together.svg) center no-repeat;
   height: 13.4375rem;
   background-size: contain;
+}
+
+@media only screen and (min-width: 48em) {
+  .article__img {
+    height: 26rem;
+    width: 100%;
+  }
 }
 
 .article__title {
@@ -140,9 +317,56 @@
   margin-top: 5rem;
 }
 
+@media only screen and (min-width: 48em) {
+  .article__title {
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (min-width: 62.5em) {
+  .article__title {
+    font-size: 2.8125rem;
+  }
+}
+
 .article__description {
   margin-top: 1.25rem;
   padding-bottom: 2rem;
+}
+
+@media only screen and (min-width: 48em) {
+  .article__description {
+    font-size: 0.875rem;
+  }
+}
+
+@media only screen and (min-width: 62.5em) {
+  .article__description {
+    font-size: 1rem;
+  }
+}
+
+@media only screen and (min-width: 48em) {
+  .article__container {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+}
+
+@media only screen and (min-width: 62.5em) {
+  .article__container {
+    padding: 6.25rem;
+    padding-top: 0;
+  }
+}
+
+@media only screen and (min-width: 48em) {
+  .article.flow {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
 
 .article.flow .article__img {
@@ -150,6 +374,13 @@
   height: 13.4375rem;
   background-size: contain;
   margin-top: 5rem;
+}
+
+@media only screen and (min-width: 62.5em) {
+  .article.flow .article__img {
+    height: 26rem;
+    width: 100%;
+  }
 }
 
 .article.user {
@@ -160,6 +391,13 @@
   background: url(../../images/illustration-your-users.svg) center no-repeat;
   height: 13.4375rem;
   background-size: contain;
+}
+
+@media only screen and (min-width: 62.5em) {
+  .article.user .article__img {
+    height: 26rem;
+    width: 100%;
+  }
 }
 
 .article.user::before {
@@ -173,6 +411,18 @@
   height: 6.25rem;
 }
 
+@media only screen and (min-width: 48em) {
+  .article.user::before {
+    background: url(../../images/bg-section-top-desktop-2.svg) top no-repeat;
+    background-size: 100% 100%;
+    position: absolute;
+    top: -9.1875rem;
+    left: 0;
+    width: 100%;
+    height: 9.25rem;
+  }
+}
+
 .article.user::after {
   content: "";
   background: url(../../images/bg-section-bottom-mobile-2.svg) bottom no-repeat;
@@ -184,10 +434,28 @@
   height: 6.25rem;
 }
 
+@media only screen and (min-width: 48em) {
+  .article.user::after {
+    background: url(../../images/bg-section-bottom-desktop-2.svg) bottom no-repeat;
+    background-size: 100% 100%;
+    position: absolute;
+    bottom: -9.0625rem;
+    left: 0;
+    width: 100%;
+    height: 9.125rem;
+  }
+}
+
 .community {
   text-align: center;
   margin-top: 4.375rem;
   margin-bottom: 17rem;
+}
+
+@media only screen and (min-width: 62.5em) {
+  .community {
+    margin-top: 15rem;
+  }
 }
 
 .community__title {
@@ -202,6 +470,20 @@
   padding: 2.75rem 1.6875rem;
 }
 
+@media only screen and (min-width: 48em) {
+  .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
 .footer::before {
   content: "";
   background: url(../../images/bg-footer-top-mobile.svg) top no-repeat;
@@ -213,11 +495,43 @@
   height: 3.125rem;
 }
 
+@media only screen and (min-width: 48em) {
+  .footer::before {
+    background: url(../../images/bg-footer-top-desktop.svg) top no-repeat;
+    background-size: 100% 100%;
+    position: absolute;
+    top: -8.875rem;
+    left: 0;
+    width: 100%;
+    height: 9.125rem;
+  }
+}
+
 .footer__newsletter h4 {
   font-size: 1.25rem;
   font-weight: 600;
   letter-spacing: 1px;
   text-transform: uppercase;
+}
+
+@media only screen and (min-width: 62.5em) {
+  .footer__newsletter p {
+    padding-right: 10.3125rem;
+  }
+}
+
+@media only screen and (min-width: 48em) {
+  .footer__newsletter {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+}
+
+@media only screen and (min-width: 62.5em) {
+  .footer__newsletter {
+    -ms-flex-preferred-size: 35%;
+        flex-basis: 35%;
+  }
 }
 
 .footer p {
@@ -234,12 +548,59 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  position: relative;
+}
+
+@media only screen and (min-width: 62.5em) {
+  .footer form {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
 }
 
 .footer form input {
   height: 3.125rem;
   border-radius: 0.3125rem;
   border: none;
+  padding-left: 1rem;
+  color: #00252e;
+  font-weight: bold;
+}
+
+.footer form input:-webkit-autofill {
+  -webkit-text-fill-color: #00252e;
+}
+
+.footer form input.error {
+  border: 1px solid #ff4242;
+}
+
+@media only screen and (min-width: 62.5em) {
+  .footer form input {
+    -ms-flex-preferred-size: 58%;
+        flex-basis: 58%;
+  }
+}
+
+.footer form small {
+  font-size: 0.75rem;
+  position: absolute;
+  top: 3.6875rem;
+  left: 0;
+  color: #ff4242;
+  visibility: hidden;
+}
+
+.footer form small.error {
+  visibility: visible;
 }
 
 .footer form button {
@@ -256,10 +617,56 @@
   color: #fff;
   background: #ff52bf;
   cursor: pointer;
+  -webkit-transition: background-color 300ms ease-in-out;
+  transition: background-color 300ms ease-in-out;
+}
+
+.footer form button:hover {
+  background-color: #ff8fd8;
+}
+
+@media only screen and (min-width: 62.5em) {
+  .footer form button {
+    -ms-flex-preferred-size: 35%;
+        flex-basis: 35%;
+    margin-top: 0;
+  }
+}
+
+@media only screen and (min-width: 48em) {
+  .footer__content {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+}
+
+@media only screen and (min-width: 62.5em) {
+  .footer__content {
+    -ms-flex-preferred-size: 30%;
+        flex-basis: 30%;
+  }
 }
 
 .footer__content .footer__info {
   margin-top: 0.625rem;
+}
+
+@media only screen and (min-width: 48em) {
+  .footer__content .footer__info {
+    padding-right: 4rem;
+  }
+}
+
+@media only screen and (min-width: 62.5em) {
+  .footer__content .footer__info {
+    padding-right: 6.25rem;
+  }
+}
+
+@media only screen and (min-width: 62.5em) {
+  .footer__content_logo {
+    width: 15rem;
+  }
 }
 
 .footer__content .footer__contact {
@@ -297,12 +704,18 @@
 }
 
 .footer__social i {
-  font-size: 25px;
+  font-size: 1.5625rem;
   cursor: pointer;
+  -webkit-transition: color 300ms ease-in-out;
+  transition: color 300ms ease-in-out;
 }
 
 .footer__social i:nth-child(1), .footer__social i:nth-child(2) {
   margin-right: 1rem;
+}
+
+.footer__social i:hover {
+  color: #02c6f6;
 }
 
 *,
